--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -63,7 +63,7 @@ Footer Area CSS
   text-align: center;
   border-radius: 50px;
   background-color: var(--black-color);
-  border: 1px solid #A66BFF;
+  border: 1px solid #3b8fcd;
   font-size: 15px;
 }
 
@@ -200,8 +200,7 @@ Footer Area CSS
 
 .copyright-area .copyright-area-content p a {
   display: inline-block;
-  font-weight: bold;
-  color: #A66BFF;
+  color: #3b8fcd;
 }
 
 .copyright-area .copyright-area-content p a:hover {
