--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,14 +69,14 @@ Default CSS
   --main-font-family: 'Open Sans', sans-serif;
   --heading-font-family: 'Jost', sans-serif;
   --monoton-font-family: 'Monoton', cursive;
-  --main-color: #3b8fcd;
+  --main-color: #104a8e;
   --optional-color: #3E019A;
   --white-color: #ffffff;
   --black-color: #14042C;
   --paragraph-color: #646464;
   --font-size: 16px;
   --transition: .6s;
-  --btn-gradient-color: radial-gradient(circle, #3b8fcd, #f8c600, #eed900, #e0ec00, #cdff05);
+  --btn-gradient-color: radial-gradient(circle, #104a8e, #114e94, #115099 #12529b, #10529e);
 }
 
 body {
@@ -270,7 +270,7 @@ Section Title CSS
 }
 
 .section-title h2 b {
-  background: radial-gradient(circle, #a66bff, #c666ef, #dd62df, #ee61cf, #fb64bf);
+  background: radial-gradient(circle, #104a8e, #104a8e, #3b8fcd, #3b8fcd, #104a8e);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -435,7 +435,12 @@ Preloader Area CSS
     opacity: 0;
   }
 }
-
+/*================================
+main slider are css
+==================================*/
+.aos-init .aos-animate{
+  color:white;
+}
 /*================================================
 Main Slides Area CSS
 =================================================*/
@@ -463,7 +468,7 @@ Main Slides Area CSS
 .main-slides-content span {
   font-size: var(--font-size);
   font-weight: 600;
-  color: var(--main-color);
+  color: white;
   display: block;
   margin-bottom: 18px;
   font-family: var(--heading-font-family);
@@ -510,7 +515,7 @@ Main Slides Area CSS
 }
 
 .home-slides.owl-theme .owl-dots .owl-dot:hover span, .home-slides.owl-theme .owl-dots .owl-dot.active span {
-  background: radial-gradient(circle, #a66bff, #c666ef, #dd62df, #ee61cf, #fb64bf);
+  background: radial-gradient(circle, #104a8e, #104a8e, #3b8fcd, #3b8fcd, #104a8e);
   width: 30px;
   border-radius: 30px;
 }
@@ -801,7 +806,7 @@ Main Hero Area CSS
 }
 
 .hero-slides.owl-theme .owl-dots .owl-dot:hover span, .hero-slides.owl-theme .owl-dots .owl-dot.active span {
-  background: radial-gradient(circle, #a66bff, #c666ef, #dd62df, #ee61cf, #fb64bf);
+  background: radial-gradient(circle, #104a8e, #104a8e, #3b8fcd, #3b8fcd, #104a8e);
   width: 30px;
   border-radius: 30px;
 }
@@ -1096,7 +1101,7 @@ About Area CSS
 }
 
 .about-content h3 b {
-  background: radial-gradient(circle, #a66bff, #c666ef, #dd62df, #ee61cf, #fb64bf);
+  background: radial-gradient(circle, #104a8e, #104a8e, #3b8fcd, #3b8fcd, #104a8e);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -1176,7 +1181,7 @@ About Area CSS
 }
 
 .about-wrap-content h3 b {
-  background: radial-gradient(circle, #a66bff, #c666ef, #dd62df, #ee61cf, #fb64bf);
+  background: radial-gradient(circle, #104a8e, #104a8e, #3b8fcd, #3b8fcd, #104a8e);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -1342,7 +1347,7 @@ Services Area CSS
 }
 
 .services-section-content h3 b {
-  background: radial-gradient(circle, #a66bff, #c666ef, #dd62df, #ee61cf, #fb64bf);
+  background: radial-gradient(circle, #104a8e, #104a8e, #3b8fcd, #3b8fcd, #104a8e);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -1503,7 +1508,7 @@ Services Area CSS
 }
 
 .services-slides-two.owl-theme .owl-dots .owl-dot:hover span, .services-slides-two.owl-theme .owl-dots .owl-dot.active span {
-  background: radial-gradient(circle, #a66bff, #c666ef, #dd62df, #ee61cf, #fb64bf);
+  background: radial-gradient(circle, #104a8e, #104a8e, #3b8fcd, #3b8fcd, #104a8e);
   width: 30px;
   border-radius: 30px;
 }
@@ -1617,7 +1622,7 @@ Services Details Area CSS
   left: 0;
   top: 2.8px;
   font-size: 18px;
-  color: #A66BFF;
+  color: #104a8e;
 }
 
 .services-details-desc .article-services-content .list li h4 {
@@ -1813,13 +1818,13 @@ Video Area CSS
   font-size: 65px;
   -webkit-transition: var(--transition);
   transition: var(--transition);
-  border: 2px solid #FB64BF;
+  border: 2px solid #104a8e;
 }
 
 .video-view-content .video-btn i {
   -webkit-transition: var(--transition);
   transition: var(--transition);
-  background: radial-gradient(circle, #a66bff, #c666ef, #dd62df, #ee61cf, #fb64bf);
+  background: radial-gradient(circle, #104a8e, #104a8e, #3b8fcd, #3b8fcd, #104a8e);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -1834,7 +1839,7 @@ Video Area CSS
   bottom: 0;
   left: 0;
   border-radius: 50%;
-  border: 2px solid #FB64BF;
+  border: 2px solid #104a8e;
   -webkit-animation: ripple 2s linear infinite;
           animation: ripple 2s linear infinite;
 }
@@ -2032,7 +2037,7 @@ Projects Area CSS
   height: 0%;
   -webkit-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
-  background: radial-gradient(circle, #a66bff, #c666ef, #dd62df, #ee61cf, #fb64bf);
+  background: radial-gradient(circle, #104a8e, #104a8e, #3b8fcd, #3b8fcd, #104a8e);
   z-index: -1;
   opacity: 0;
   visibility: hidden;
@@ -2088,8 +2093,8 @@ Projects Area CSS
   margin: 0 10px;
   padding: 0;
   background: transparent;
-  color: #A66BFF;
-  border: 2px solid #A66BFF;
+  color: #104a8e;
+  border: 2px solid #104a8e;
   border-radius: 50%;
   -webkit-transition: var(--transition);
   transition: var(--transition);
@@ -2195,12 +2200,12 @@ Projects Area CSS
 }
 
 .projects-filter-menu li:hover {
-  background: radial-gradient(circle, #a66bff, #c666ef, #dd62df, #ee61cf, #fb64bf);
+  background: radial-gradient(circle, #104a8e, #104a8e, #3b8fcd, #3b8fcd, #104a8e);
   color: var(--white-color);
 }
 
 .projects-filter-menu .filter.mixitup-control-active {
-  background: radial-gradient(circle, #a66bff, #c666ef, #dd62df, #ee61cf, #fb64bf);
+  background: radial-gradient(circle, #104a8e, #104a8e, #3b8fcd, #3b8fcd, #104a8e);
   color: var(--white-color);
 }
 
@@ -2220,7 +2225,7 @@ Projects Area CSS
   -webkit-transition: var(--transition);
   transition: var(--transition);
   visibility: hidden;
-  background: radial-gradient(circle, #a66bff, #c666ef, #dd62df, #ee61cf, #fb64bf);
+  background: radial-gradient(circle, #104a8e, #104a8e, #3b8fcd, #3b8fcd, #104a8e);
   border-radius: 20px;
   z-index: 1;
 }
@@ -2382,8 +2387,8 @@ Projects Area CSS
   margin: 0 10px;
   padding: 0;
   background: transparent;
-  color: #A66BFF;
-  border: 2px solid #A66BFF;
+  color: #104a8e;
+  border: 2px solid #104a8e;
   border-radius: 50%;
   -webkit-transition: var(--transition);
   transition: var(--transition);
@@ -2574,7 +2579,7 @@ Projects Details Area CSS
   left: 0;
   top: 2.8px;
   font-size: 18px;
-  color: #A66BFF;
+  color: #104a8e;
 }
 
 .projects-details-desc .article-projects-content .projects-list li h4 {
@@ -2703,7 +2708,7 @@ Testimonials Area CSS
 }
 
 .testimonials-section-content h3 b {
-  background: radial-gradient(circle, #a66bff, #c666ef, #dd62df, #ee61cf, #fb64bf);
+  background: radial-gradient(circle, #104a8e, #104a8e, #3b8fcd, #3b8fcd, #104a8e);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -2897,7 +2902,7 @@ Pricing Area CSS
 }
 
 .single-pricing-card h3 {
-  background: radial-gradient(circle, #a66bff, #c666ef, #dd62df, #ee61cf, #fb64bf);
+  background: radial-gradient(circle, #104a8e, #104a8e, #3b8fcd, #3b8fcd, #104a8e);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   font-size: 20px;
@@ -2957,7 +2962,7 @@ Pricing Area CSS
   width: 25px;
   line-height: 25px;
   background-color: var(--black-color);
-  border: 1px solid #A66BFF;
+  border: 1px solid #104a8e;
   border-radius: 50px;
   text-align: center;
   font-size: var(--font-size);
@@ -2983,7 +2988,7 @@ Pricing Area CSS
 
 .single-pricing-card .most-popular span {
   display: inline-block;
-  background: radial-gradient(circle, #a66bff, #c666ef, #dd62df, #ee61cf, #fb64bf);
+  background: radial-gradient(circle, #104a8e, #104a8e, #3b8fcd, #3b8fcd, #104a8e);
   padding: 10px 20px;
   border-radius: 15px;
   color: var(--white-color);
@@ -3129,7 +3134,7 @@ Blog Area CSS
 }
 
 .blog-card:hover .blog-content .date {
-  background: radial-gradient(circle, #a66bff, #c666ef, #dd62df, #ee61cf, #fb64bf);
+  background: radial-gradient(circle, #104a8e, #104a8e, #3b8fcd, #3b8fcd, #104a8e);
   color: var(--white-color);
 }
 
@@ -3154,8 +3159,8 @@ Blog Area CSS
   margin: 0 10px;
   padding: 0;
   background: transparent;
-  color: #A66BFF;
-  border: 2px solid #A66BFF;
+  color: #104a8e;
+  border: 2px solid #104a8e;
   border-radius: 50%;
   -webkit-transition: var(--transition);
   transition: var(--transition);
@@ -3392,7 +3397,7 @@ Blog Area CSS
 }
 
 .single-blog-card .blog-image .date {
-  background: radial-gradient(circle, #a66bff, #c666ef, #dd62df, #ee61cf, #fb64bf);
+  background: radial-gradient(circle, #104a8e, #104a8e, #3b8fcd, #3b8fcd, #104a8e);
   display: inline-block;
   font-size: 15px;
   font-weight: 500;
@@ -3519,13 +3524,13 @@ Blog Details Area CSS
   font-size: 45px;
   -webkit-transition: var(--transition);
   transition: var(--transition);
-  border: 2px solid #FB64BF;
+  border: 2px solid #104a8e;
 }
 
 .blog-details-desc .article-image .video-btn i {
   -webkit-transition: var(--transition);
   transition: var(--transition);
-  background: radial-gradient(circle, #a66bff, #c666ef, #dd62df, #ee61cf, #fb64bf);
+  background: radial-gradient(circle, #104a8e, #104a8e, #3b8fcd, #3b8fcd, #104a8e);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -3540,7 +3545,7 @@ Blog Details Area CSS
   bottom: 0;
   left: 0;
   border-radius: 50%;
-  border: 2px solid #FB64BF;
+  border: 2px solid #104a8e;
   -webkit-animation: ripple 2s linear infinite;
           animation: ripple 2s linear infinite;
 }
@@ -3630,7 +3635,7 @@ Blog Details Area CSS
   left: 0;
   top: 2.8px;
   font-size: 18px;
-  color: #A66BFF;
+  color: #104a8e;
 }
 
 .blog-details-desc .article-content .list li h4 {
@@ -3749,7 +3754,7 @@ Blog Details Area CSS
 
 .blog-details-desc .article-share .share-social li a i:hover {
   color: var(--white-color);
-  background: radial-gradient(circle, #a66bff, #c666ef, #dd62df, #ee61cf, #fb64bf);
+  background: radial-gradient(circle, #104a8e, #104a8e, #3b8fcd, #3b8fcd, #104a8e);
 }
 
 .blog-details-desc .article-comments {
@@ -4106,8 +4111,8 @@ Skill Area CSS
   border: 1px solid var(--main-color);
 }
 
-.skill-bar .progress-content-outter.bg-A66BFF {
-  border: 1px solid #A66BFF;
+.skill-bar .progress-content-outter.bg-#104a8e {
+  border: 1px solid #104a8e;
 }
 
 .skill-bar .progress-content {
@@ -4125,8 +4130,8 @@ Skill Area CSS
   background: var(--main-color);
 }
 
-.skill-bar .progress-content.bg-A66BFF {
-  background: #A66BFF;
+.skill-bar .progress-content.bg-#104a8e {
+  background: #104a8e;
 }
 
 .skill-bar-btn {
@@ -4211,7 +4216,7 @@ Features Area CSS
   height: 0%;
   -webkit-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
-  background: radial-gradient(circle, #a66bff, #c666ef, #dd62df, #ee61cf, #fb64bf);
+  background: radial-gradient(circle, #104a8e, #104a8e, #3b8fcd, #3b8fcd, #104a8e);
   z-index: -1;
   opacity: 0;
   visibility: hidden;
@@ -4402,7 +4407,7 @@ Talk Area CSS
 }
 
 .talk-content h3 b {
-  background: radial-gradient(circle, #a66bff, #c666ef, #dd62df, #ee61cf, #fb64bf);
+  background: radial-gradient(circle, #104a8e, #104a8e, #3b8fcd, #3b8fcd, #104a8e);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -4905,7 +4910,7 @@ Events Area CSS
 
 .coze-grid-sorting .result-count p .count {
   font-weight: 600;
-  background: radial-gradient(circle, #a66bff, #c666ef, #dd62df, #ee61cf, #fb64bf);
+  background: radial-gradient(circle, #104a8e, #104a8e, #3b8fcd, #3b8fcd, #104a8e);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -5601,13 +5606,13 @@ Career Details Area CSS
   font-size: 45px;
   -webkit-transition: var(--transition);
   transition: var(--transition);
-  border: 2px solid #FB64BF;
+  border: 2px solid #104a8e;
 }
 
 .career-details-desc .career-details-image .video-btn i {
   -webkit-transition: var(--transition);
   transition: var(--transition);
-  background: radial-gradient(circle, #a66bff, #c666ef, #dd62df, #ee61cf, #fb64bf);
+  background: radial-gradient(circle, #104a8e, #104a8e, #3b8fcd, #3b8fcd, #104a8e);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -5622,7 +5627,7 @@ Career Details Area CSS
   bottom: 0;
   left: 0;
   border-radius: 50%;
-  border: 2px solid #FB64BF;
+  border: 2px solid #104a8e;
   -webkit-animation: ripple 2s linear infinite;
           animation: ripple 2s linear infinite;
 }
@@ -7357,7 +7362,7 @@ Products Area CSS
   -webkit-transition: var(--transition);
   transition: var(--transition);
   visibility: hidden;
-  background: radial-gradient(circle, #fb64bf, #c666ef, #dd62df, #ee61cf, #fb64bf);
+  background: radial-gradient(circle, #104a8e, #104a8e, #3b8fcd, #3b8fcd, #104a8e);
   border-radius: 15px;
   z-index: 1;
 }
@@ -7432,7 +7437,7 @@ Products Area CSS
   bottom: 10px;
   z-index: 1;
   display: inline-block;
-  background-color: #A66BFF;
+  background-color: #104a8e;
   color: var(--white-color);
   padding: 5px 20px;
   font-size: 15px;
@@ -7447,7 +7452,7 @@ Products Area CSS
   bottom: 10px;
   z-index: 1;
   display: inline-block;
-  background-color: #A66BFF;
+  background-color: #104a8e;
   color: var(--white-color);
   padding: 5px 20px;
   font-size: 15px;
@@ -8258,7 +8263,7 @@ Products Details Area CSS
   top: 10px;
   z-index: 1;
   display: inline-block;
-  background-color: #A66BFF;
+  background-color: #104a8e;
   color: var(--white-color);
   padding: 5px 20px;
   font-size: 15px;
@@ -8459,7 +8464,7 @@ Products Details Area CSS
 
 .products-details-tabs .nav .nav-item .nav-link:hover, .products-details-tabs .nav .nav-item .nav-link.active {
   color: var(--white-color);
-  background: radial-gradient(circle, #a66bff, #c666ef, #dd62df, #ee61cf, #fb64bf);
+  background: radial-gradient(circle, #104a8e, #104a8e, #3b8fcd, #3b8fcd, #104a8e);
 }
 
 .products-details-tabs .tab-content .tab-pane {
@@ -8774,7 +8779,10 @@ Products Details Area CSS
   border: none;
   padding: 15px 30px;
 }
-
+.default-btn{
+  background-color:white;
+  border:1px solid gray;
+}
 .related-title {
   text-align: start;
   margin-bottom: 35px;
